Init con el codigoa inicial

--- a/Miguel.Servicio/Miguel.Servicio/appsettings.json
+++ b/Miguel.Servicio/Miguel.Servicio/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionString": {
+    "ConnectionMigue": "Server=localhost;Database=Serv.Miguel;User Id=SA;Password=Astbmxo33.;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "MaxRetryCount": 10,
+    "MaxRetryDelay": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
